get all missions
